Fixed discord text being too dark and made read discord channels appear darker

--- a/nord theme.css
+++ b/nord theme.css
@@ -17,7 +17,7 @@
 
 .theme-dark {
   --header-secondary: var(--bodytext);
-  --text-normal: var(--secondarytext);
+/*   --text-normal: var(--secondarytext); */
   --text-muted: var(--secondarytext);
   --channels-default: var(--secondarytext);
   --channels-default: #cccccc;
